force-app/main/default/objects/Plan_Cap__c/Plan_Cap__c.object-meta.xml
<CustomObject>
    <description>Defines earning caps and value boundaries for an incentive plan template.</description>
    <label>Plan Cap</label>
    <nameField><label>Plan Cap Name</label><type>Text</type></nameField>
    <pluralLabel>Plan Caps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>