force-app/main/default/objects/Plan_Cap__c/fields/Cap_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cap_Amount__c</fullName>
    <label>Cap Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>