force-app/main/default/objects/Plan_Cap__c/fields/Cap_Pct__c.field-meta.xml
<CustomField>
    <fullName>Cap_Pct__c</fullName>
    <label>Cap Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>