force-app/main/default/objects/Plan_Cap__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <label>Plan Template</label>
    <type>MasterDetail</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Plan Caps</relationshipLabel>
    <relationshipName>Plan_Caps</relationshipName>
</CustomField>