force-app/main/default/objects/Plan_Cap__c/fields/Value_Cap_Amount__c.field-meta.xml
<CustomField>
    <fullName>Value_Cap_Amount__c</fullName>
    <description>For Commissionable_Value_Cap</description>
    <label>Value Cap Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>