force-app/main/default/objects/Plan_Cap__c/fields/Value_Floor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Value_Floor_Amount__c</fullName>
    <description>For Commissionable_Value_Floor</description>
    <label>Value Floor Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>