force-app/main/default/objects/Plan_Cap__c/fields/Windfall_Rate_Pct__c.field-meta.xml
<CustomField>
    <fullName>Windfall_Rate_Pct__c</fullName>
    <label>Windfall Rate Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>