force-app/main/default/objects/Plan_Cap__c/fields/Windfall_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Windfall_Treatment__c</fullName>
    <label>Windfall Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ignored</fullName><default>false</default><label>Ignored</label></value>
            <value><fullName>Deferred_To_Next_Period</fullName><default>false</default><label>Deferred To Next Period</label></value>
            <value><fullName>Reduced_Rate</fullName><default>false</default><label>Reduced Rate</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>